# SolarZip

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/include/: ByteToolkit.h
tools/sz3/: CMakeLists.txt  FAST.code-workspace  bina2fits.py  dat_compress.cpp  fits2bina.py  solarzip.cpp  sz3.cpp
tools/sz3/include/SZ3/: version.hpp
tools/sz3/include/qcat/: CMakeLists.txt  Makefile
tools/sz3/include/qcat/.libs/: libqcat.la  libqcat.lai  libqcat.so.0
tools/sz3/include/qcat/include/: ByteToolkit.h  qcat.h  qcat_compressionAnalysis.h
tools/sz3/include/qcat/src/: ByteToolkit.c  Huffman.c  libqcat_la-ByteToolkit.lo  libqcat_la-DynamicByteArray.lo  libqcat_la-DynamicDoubleArray.lo  libqcat_la-DynamicFloatArray.lo  libqcat_la-DynamicIntArray.lo  libqcat_la-Huffman.lo  libqcat_la-qcat_compressionAnalysis.lo  libqcat_la-qcat_dataAnalysis.lo  libqcat_la-qcat_gnuplot.lo  libqcat_la-qcat_hashtable.lo  libqcat_la-qcat_ssim.lo  libqcat_la-rw.lo  libqcat_la-sz_dummy_compression.lo  libqcat_la-sz_utility.lo  qcat_compressionAnalysis.c  sz_dummy_compression.c
tools/sz3/include/qcat/src/.deps/: libqcat_la-ByteToolkit.Plo  libqcat_la-DynamicByteArray.Plo  libqcat_la-DynamicDoubleArray.Plo  libqcat_la-DynamicFloatArray.Plo  libqcat_la-DynamicIntArray.Plo  libqcat_la-Huffman.Plo  libqcat_la-qcat_compressionAnalysis.Plo  libqcat_la-qcat_dataAnalysis.Plo  libqcat_la-qcat_gnuplot.Plo  libqcat_la-qcat_hashtable.Plo  libqcat_la-qcat_ssim.Plo  libqcat_la-rw.Plo  libqcat_la-sz_dummy_compression.Plo  libqcat_la-sz_utility.Plo
tools/sz3/lib/cmake/SZ3/: SZ3Targets.cmake
